--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,11 @@
   </div>
 </template>
 
+<script
+  type="text/javascript"
+  src="https://identity.netlify.com/v1/netlify-identity-widget.js"
+></script>
+
 <script>
   function addScores(element, scores) {
     scores.forEach((score) => {
@@ -117,3 +122,8 @@
 
   initialize();
 </script>
+
+<script
+  type="text/javascript"
+  src="https://identity.netlify.com/v1/netlify-identity-widget.js"
+></script>
